--- a/prometheus/helm-chart.yaml
+++ b/prometheus/helm-chart.yaml
@@ -1,16 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: cprom
   namespace: argocd
 spec:
-  destination:
-	namespace: prometheus
-	server: https://kubernetes.default.svc
   project: default
   source:
-    repoURL: https://prometheus-community.github.io/helm-charts
     chart: kube-prometheus-stack
+    repoURL: https://prometheus-community.github.io/helm-charts
+    targetRevision: 43.1.1
     helm:
+      releaseName: cprom
       valuesFiles:
       - prom-values.yaml
+  destination:
+    server: "https://kubernetes.default.svc"
+    namespace: cprom
