--- a/prometheus/helm-chart.yaml
+++ b/prometheus/helm-chart.yaml
@@ -1,6 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-options: Replace=true
   name: cprom
   namespace: argocd
 spec:
