--- a/prometheus/helm-chart-crds.yaml
+++ b/prometheus/helm-chart-crds.yaml
@@ -1,14 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cprom
+  name: cprom-crds
   namespace: argocd
 spec:
   project: default
   source:
-    chart: kube-prometheus-stack
+    chart: charts/kube-prometheus-stack/crds/
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 43.1.1
+    syncOptions:
+    - Replace=true
     helm:
       releaseName: cprom
       valuesFiles:
