--- a/prometheus/helm-chart-prometheus-stack.yaml
+++ b/prometheus/helm-chart-prometheus-stack.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cprom
+  name: cprom-stack
   namespace: argocd
 spec:
   project: default
@@ -10,6 +10,7 @@ spec:
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 43.1.1
     helm:
+      skipCrds: true
       releaseName: cprom
       valuesFiles:
       - prom-values.yaml
