--- a/prometheus/helm-chart-crds.yaml
+++ b/prometheus/helm-chart-crds.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     chart: charts/kube-prometheus-stack/crds/
-    repoURL: https://prometheus-community.github.io/helm-charts
+    repoURL: https://github.com/prometheus-community/helm-charts.git
     targetRevision: 43.1.1
     syncOptions:
     - Replace=true
