--- a/prometheus/helm-chart-crds.yaml
+++ b/prometheus/helm-chart-crds.yaml
@@ -9,10 +9,13 @@ spec:
     chart: charts/kube-prometheus-stack/crds/
     repoURL: https://github.com/prometheus-community/helm-charts.git
     targetRevision: 43.1.1
-    syncOptions:
-    - Replace=true
+    directory:
+      recurse: true
     helm:
       releaseName: cprom-crds
+  syncPolicy:
+    syncOptions:
+    - Replace=true
   destination:
     server: "https://kubernetes.default.svc"
     namespace: cprom
