--- a/prometheus/helm-chart-crds.yaml
+++ b/prometheus/helm-chart-crds.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     chart: charts/kube-prometheus-stack/crds/
     repoURL: https://github.com/prometheus-community/helm-charts.git
-    targetRevision: 43.1.1
+    targetRevision: kube-prometheus-stack-43.1.1
     directory:
       recurse: true
     helm:
