--- a/prometheus/helm-chart-prometheus-stack.yaml
+++ b/prometheus/helm-chart-prometheus-stack.yaml
@@ -10,6 +10,7 @@ spec:
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 43.1.1
     helm:
+      skipCrds: true
       releaseName: cprom
       valuesFiles:
       - prom-values.yaml
