--- a/prometheus/helm-chart.yaml
+++ b/prometheus/helm-chart.yaml
@@ -14,7 +14,7 @@ spec:
     targetRevision: 43.1.1
     helm:
       releaseName: cprom
-      valuesFiles:
+      valueFiles:
       - prom-values.yaml
   destination:
     server: "https://kubernetes.default.svc"
