--- a/prometheus/helm-chart.yaml
+++ b/prometheus/helm-chart.yaml
@@ -14,8 +14,17 @@ spec:
     targetRevision: 43.1.1
     helm:
       releaseName: cprom
-      valueFiles:
-      - prom-values.yaml
+      values:
+        prometheus:
+          prometheusSpec:    
+            storageSpec: 
+             volumeClaimTemplate:
+               spec:
+                 storageClassName: longhorn
+                 accessModes: ["ReadWriteOnce"]
+                 resources:
+                   requests:
+                     storage: 25Gi
   destination:
     server: "https://kubernetes.default.svc"
     namespace: cprom
