--- a/prometheus/helm-chart.yaml
+++ b/prometheus/helm-chart.yaml
@@ -14,6 +14,7 @@ spec:
     targetRevision: 43.1.1
     helm:
       releaseName: cprom
+      valueFiles: [ "prom-values.yaml" ]
   destination:
     server: "https://kubernetes.default.svc"
     namespace: cprom
