--- a/metallb/metallb-ipaddress.yaml
+++ b/metallb/metallb-ipaddress.yaml
@@ -2,7 +2,7 @@ apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
   name: first-pool
-  namespace: metallb-system
+  namespace: metallb
 spec:
   addresses:
   - 192.168.0.231-192.168.0.254
