--- a/metallb/l2advert.yaml
+++ b/metallb/l2advert.yaml
@@ -2,4 +2,4 @@ apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
   name: l2advert
-  namespace: metallb
+  namespace: metallb-system
