--- a/jellyfin/values.yaml
+++ b/jellyfin/values.yaml
@@ -115,7 +115,7 @@ persistence:
     customVolume:
       nfs:
         server: drebin.riles.xyz
-        path: tank/jellyfin_nfs_config
+        path: /tank/jellyfin_nfs_config
   data:
     # -- Data: Enable persistence
     enabled: true
@@ -125,7 +125,7 @@ persistence:
     customVolume:
       nfs:
         server: drebin.riles.xyz
-        path: tank/jellyfin_nfs
+        path: /tank/jellyfin_nfs
 
 # -- Non-sensitive environment variables to be set in the pods. See the [application docs](https://docs.linuxserver.io/images/docker-jellyfin)
 env: {}
