--- a/external-dns/vultr-secret.yaml
+++ b/external-dns/vultr-secret.yaml
@@ -7,4 +7,4 @@ metadata:
     avp.kubernetes.io/path: "kv/data/vultr"
 type: Opaque
 data:
-  VULTR_API_KEY: <VULTR_API_KEY>
+  VULTR_API_KEY: <vultr_api_key>
