--- a/external-dns/vultr-secret.yaml
+++ b/external-dns/vultr-secret.yaml
@@ -6,5 +6,5 @@ metadata:
   annotations:
     avp.kubernetes.io/path: "kv/data/vultr"
 type: Opaque
-data:
+stringData:
   VULTR_API_KEY: <vultr_api_key>
