--- a/authentik/authentik-secrets.yaml
+++ b/authentik/authentik-secrets.yaml
@@ -5,8 +5,9 @@ metadata:
   namespace: authentik
   annotations:
     avp.kubernetes.io/path: "kv/data/authentik"
+    avp.kubernetes.io/secret-version: "2"
 type: Opaque
-data:
+stringData:
   AUTHENTIK_EMAIL_PASSWORD: <smtp_app_pw>
   AUTHENTIK_EMAIL_USERNAME: <smtp_username>
   AUTHENTIK_POSTGRESQL__PASSWORD: <postgresql_pw>
