--- a/vultr-certmanager-webhook-secret/vultr-secret.yaml
+++ b/vultr-certmanager-webhook-secret/vultr-secret.yaml
@@ -2,7 +2,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: vultr-credentials
-  namespace: external-dns
+  namespace: cert-manager
   annotations:
     avp.kubernetes.io/path: "kv/data/vultr"
 type: Opaque
