--- a/cert-manager/issuer.yaml
+++ b/cert-manager/issuer.yaml
@@ -12,7 +12,14 @@ spec:
      # if not existing, it will register a new account and stores it
      name: le-issuer-account-key
    solvers:
-     - http01:
+   - dns01:
+     webhook:
+       groupName: acme.vultr.com
+       solverName: vultr
+       config:
+         apiKeySecretRef:
+           key: apiKey
+           name: vultr-credentials
          # The ingressClass used to create the necessary ingress routes
          ingress:
            class: traefik
