--- a/authentik/authentik.yaml
+++ b/authentik/authentik.yaml
@@ -956,6 +956,7 @@ metadata:
     app.kubernetes.io/instance: authentik
     app.kubernetes.io/version: "2023.4.0"
     app.kubernetes.io/managed-by: Helm
+  annotations:
     external-dns.alpha.kubernetes.io/hostname: "authentik.dev-riles.xyz."
     cert-manager.io/cluster-issuer: "le-example-http"
 spec:
