--- a/jellyfin/ingress.yaml
+++ b/jellyfin/ingress.yaml
@@ -14,17 +14,18 @@ metadata:
     cert-manager.io/cluster-issuer: le-example-http
     external-dns.alpha.kubernetes.io/hostname: jellyfin.dev-riles.xyz.
     kubernetes.io/ingress.class: nginx
-  rules:
-    - host: "jellyfin.dev-riles.xyz"
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: jellyfin
-                port:
-      tls:
-      - hosts:
-        - jellyfin.dev-riles.xyz
-        secretName: tls-jellyfin-ingress-http
+  spec:
+    rules:
+      - host: "jellyfin.dev-riles.xyz"
+        http:
+          paths:
+            - path: /
+              pathType: Prefix
+              backend:
+                service:
+                  name: jellyfin
+                  port:
+        tls:
+        - hosts:
+          - jellyfin.dev-riles.xyz
+          secretName: tls-jellyfin-ingress-http
