--- a/nextcloud/templates/nextcloud-secret.yaml
+++ b/nextcloud/templates/nextcloud-secret.yaml
@@ -11,6 +11,6 @@ stringData:
   usernameKey: <username>
   passwordKey: <password>
   tokenKey: <tokenkey>
-  smtpUser: <smtppuser>
+  smtpUser: <smtpuser>
   smtpPass: <smtppass>
   redisPass: <redispw>
