--- a/nextcloud/templates/nextcloud-secret.yaml
+++ b/nextcloud/templates/nextcloud-secret.yaml
@@ -10,7 +10,7 @@ type: Opaque
 stringData:
   usernameKey: <username>
   passwordKey: <password>
-  tokenKey: <tokenkey>
+  tokenKey: <tokenKey>
   smtpUser: <smtpuser>
   smtpPass: <smtppass>
   redisPass: <redispw>
