--- a/nextcloud/templates/nextcloud-secret.yaml
+++ b/nextcloud/templates/nextcloud-secret.yaml
@@ -8,8 +8,8 @@ metadata:
     avp.kubernetes.io/secret-version: "1"
 type: Opaque
 stringData:
-  usernameKey: <username>
-  passwordKey: <password>
+  nextcloud-username: <username>
+  nextcloud-password: <password>
   tokenKey: <tokenKey>
   smtpUser: <smtpuser>
   smtpPass: <smtppass>
