--- a/nextcloud/templates/nextcloud-secret.yaml
+++ b/nextcloud/templates/nextcloud-secret.yaml
@@ -11,6 +11,6 @@ stringData:
   nextcloud-username: <username>
   nextcloud-password: <password>
   tokenKey: <tokenKey>
-  smtpUser: <smtpuser>
-  smtpPass: <smtppass>
+  smtp-username: <smtpuser>
+  smtp-password: <smtppass>
   redisPass: <redispw>
