--- a/nextcloud/values.yaml
+++ b/nextcloud/values.yaml
@@ -87,8 +87,7 @@ nextcloud:
   # If web server is not binding default port, you can define it
   containerPort: 80
   datadir: /nfs_data
-  persistence:
-    subPath:
+  persistence: true
   mail:
     enabled: true
     fromAddress: reilly
