--- a/transmission-openvpn/secret.yaml
+++ b/transmission-openvpn/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: transmission-config
   namespace: transmission
   annotations:
-    avp.kubernetes.io/path: "kv/data/transmission"
+    avp.kubernetes.io/path: "kv/data/transmission-config"
     avp.kubernetes.io/secret-version: "1"
 type: Opaque
 stringData:
