--- a/transmission-openvpn/prowlarr.yaml
+++ b/transmission-openvpn/prowlarr.yaml
@@ -4,8 +4,13 @@ metadata:
   name: prowlarr
 spec:
   replicas: 1
-  strategy:
-    type: Recreate
+  selector:
+    matchLabels:
+      app: prowlarr
+  template:
+    metadata:
+      labels:
+        app: prowlarr
     spec:
       containers:
         - env:
