--- a/transmission-openvpn/prowlarr.yaml
+++ b/transmission-openvpn/prowlarr.yaml
@@ -55,3 +55,28 @@ spec:
       targetPort: 9696
   selector:
     kubernetes.io/name: prowlarr
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: prowlarr
+  annotations:
+    cert-manager.io/cluster-issuer: le-example-http
+    external-dns.alpha.kubernetes.io/hostname: prowlarr.dev-riles.xyz.
+    kubernetes.io/ingress.class: nginx
+spec:
+  rules:
+  - host: "prowlarr.dev-riles.xyz"
+    http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: prowlarr
+              port:
+                number: 9696
+  tls:
+  - hosts:
+    - prowlarr.dev-riles.xyz
+    secretName: tls-prowlarr-ingress-http
