--- a/transmission-openvpn/sonarr.yaml
+++ b/transmission-openvpn/sonarr.yaml
@@ -4,8 +4,13 @@ metadata:
   name: sonarr
 spec:
   replicas: 1
-  strategy:
-    type: Recreate
+  selector:
+    matchLabels:
+      app: sonarr
+  template:
+    metadata:
+      labels:
+        app: sonarr
     spec:
       containers:
         - env:
@@ -65,5 +70,28 @@ spec:
   resources:
     requests:
       storage: 100Mi
-  selector:
-    kubernetes.io/name: sonarr
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: sonarr
+  annotations:
+    cert-manager.io/cluster-issuer: le-example-http
+    external-dns.alpha.kubernetes.io/hostname: sonarr.dev-riles.xyz.
+    kubernetes.io/ingress.class: nginx
+spec:
+  rules:
+  - host: "sonarr.dev-riles.xyz"
+    http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: sonarr
+              port:
+                number: 9696
+  tls:
+  - hosts:
+    - sonarr.dev-riles.xyz
+    secretName: tls-sonarr-ingress-http
