--- a/transmission-openvpn/transmission-openvpn.yaml
+++ b/transmission-openvpn/transmission-openvpn.yaml
@@ -4,9 +4,13 @@ metadata:
   name: transmission-openvpn
 spec:
   replicas: 1
-  strategy:
-    type: Recreate
+  selector:
+    matchLabels:
+      app: transmission-openvpn
   template:
+    metadata:
+      labels:
+        app: transmission-openvpn
     spec:
       containers:
         envFrom:
@@ -57,4 +61,29 @@ spec:
       port: 9091
       targetPort: 9091
   selector:
-    kubernetes.io/name: transmission-openvpn
+    app: transmission-openvpn
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: transmission-openvpn
+  annotations:
+    cert-manager.io/cluster-issuer: le-example-http
+    external-dns.alpha.kubernetes.io/hostname: transmission-openvpn.dev-riles.xyz.
+    kubernetes.io/ingress.class: nginx
+spec:
+  rules:
+  - host: "transmission-openvpn.dev-riles.xyz"
+    http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: transmission-openvpn
+              port:
+                number: 9696
+  tls:
+  - hosts:
+    - transmission-openvpn.dev-riles.xyz
+    secretName: tls-transmission-openvpn-ingress-http
