--- a/transmission-openvpn/sonarr.yaml
+++ b/transmission-openvpn/sonarr.yaml
@@ -48,6 +48,8 @@ spec:
     - name: "8989"
       port: 8989
       targetPort: 8989
+  selector:
+    app: sonarr
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
