--- a/transmission-openvpn/secret.yaml
+++ b/transmission-openvpn/secret.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: transmission
   annotations:
     avp.kubernetes.io/path: "kv/data/transmission-config"
-    avp.kubernetes.io/secret-version: "1"
+    avp.kubernetes.io/secret-version: "2"
 type: Opaque
 stringData:
   LOCAL_NETWORK: <local_network>
@@ -13,3 +13,7 @@ stringData:
   OPENVPN_PASSWORD: <openvpn_password>
   OPENVPN_PROVIDER: <openvpn_provider>
   OPENVPN_USERNAME: <openvpn_username>
+  TRANSMISSION_RPC_AUTHENTICATION_REQUIRED: <rpc_auth_enable>
+  TRANSMISSION_RPC_ENABLED: <rpc_enable>
+  TRANSMISSION_RPC_PASSWORD: <rpc_pw>
+  TRANSMISSION_RPC_USERNAME: <rpc_user>
