--- a/transmission-openvpn/sonarr.yaml
+++ b/transmission-openvpn/sonarr.yaml
@@ -28,16 +28,18 @@ spec:
           volumeMounts:
             - mountPath: /config
               name: sonarr-config
-            - mountPath: /mnt/data
-              name: sonarr-data
+            - mountPath: /data
+              name: nfs-data
       restartPolicy: Always
       volumes:
+        - name: nfs-data
+          nfs:
+            server: drebin.riles.xyz
+            path: /tank/transmission_k8s_data
+            readOnly: false
         - name: sonarr-config
           persistentVolumeClaim:
             claimName: sonarr-config
-        - name: sonarr-data
-          persistentVolumeClaim:
-            claimName: sonarr-data
 ---
 apiVersion: v1
 kind: Service
@@ -55,17 +57,6 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: sonarr-config
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: sonarr-data
 spec:
   accessModes:
     - ReadWriteOnce
