--- a/transmission-openvpn/radarr.yaml
+++ b/transmission-openvpn/radarr.yaml
@@ -83,6 +83,12 @@ metadata:
     cert-manager.io/cluster-issuer: le-example-http
     external-dns.alpha.kubernetes.io/hostname: radarr.dev-riles.xyz.
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/server-snippets: |
+      location / {
+       proxy_http_version 1.1;
+       proxy_set_header Upgrade $http_upgrade;
+       proxy_set_header Connection $http_connection;
+       }
 spec:
   rules:
   - host: "radarr.dev-riles.xyz"
