--- a/transmission-openvpn/transmission-openvpn.yaml
+++ b/transmission-openvpn/transmission-openvpn.yaml
@@ -14,6 +14,13 @@ spec:
     spec:
       containers:
         - name: transmission-openvpn
+          env:
+            - name: PGID
+              value: "1000"
+            - name: PUID
+              value: "1000"
+            - name: TZ
+              value: America/New_York
           envFrom:
           - secretRef:
               name: transmission-config
