--- a/transmission-openvpn/readarr.yaml
+++ b/transmission-openvpn/readarr.yaml
@@ -21,6 +21,7 @@ spec:
             - name: TZ
               value: America/New_York
           image: linuxserver/readarr
+          tag: develop
           name: readarr
           ports:
             - containerPort: 8787
