--- a/transmission-openvpn/readarr.yaml
+++ b/transmission-openvpn/readarr.yaml
@@ -20,8 +20,7 @@ spec:
               value: "1000"
             - name: TZ
               value: America/New_York
-          image: linuxserver/readarr
-          tag: develop
+          image: linuxserver/readarr:develop
           name: readarr
           ports:
             - containerPort: 8787
