--- a/jellyfin/service.yaml
+++ b/jellyfin/service.yaml
@@ -5,18 +5,13 @@ kind: Service
 metadata:
   name: jellyfin
   labels:
-    helm.sh/chart: jellyfin-2.0.0
-    app.kubernetes.io/name: jellyfin
-    app.kubernetes.io/instance: jellyfin
-    app.kubernetes.io/version: "10.8.10"
-    app.kubernetes.io/managed-by: Helm
+    app: jellyfin
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 8096
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: jellyfin
-    app.kubernetes.io/instance: jellyfin
+    app: jellyfin
