--- a/jellyfin/configmap.yaml
+++ b/jellyfin/configmap.yaml
@@ -5,10 +5,8 @@ kind: ConfigMap
 metadata:
   name: jellyfin
   labels:
-    helm.sh/chart: jellyfin-2.0.0
-    app.kubernetes.io/name: jellyfin
-    app.kubernetes.io/instance: jellyfin
-    app.kubernetes.io/version: "10.8.10"
-    app.kubernetes.io/managed-by: Helm
+    app: jellyfin
 data:
-  {}
+  PUID: 1000
+  PGID: 1000
+  TZ: America/New_York
