--- a/transmission-openvpn/transmission-openvpn.yaml
+++ b/transmission-openvpn/transmission-openvpn.yaml
@@ -21,6 +21,8 @@ spec:
               value: "1000"
             - name: TZ
               value: America/New_York
+            - name: TRANSMISSION_DOWNLOAD_QUEUE_SIZE
+              value: 50
           envFrom:
           - secretRef:
               name: transmission-config
