--- a/jellyfin/configmap.yaml
+++ b/jellyfin/configmap.yaml
@@ -7,10 +7,10 @@ metadata:
   labels:
     app: jellyfin
 data:
-  PUID: 1000
-  PGID: 1000
+  PUID: "1000"
+  PGID: "1000"
   TZ: America/New_York
-  JELLYFIN_CACHE_DIR: "/var/cache/jellyfin"
-  JELLYFIN_CONFIG_DIR: "/etc/jellyfin"
-  JELLYFIN_DATA_DIR: "/var/lib/jellyfin"
-  JELLYFIN_LOG_DIR: "/var/log/jellyfin"
+  JELLYFIN_CACHE_DIR: /var/cache/jellyfin
+  JELLYFIN_CONFIG_DIR: /etc/jellyfin
+  JELLYFIN_DATA_DIR: /var/lib/jellyfin
+  JELLYFIN_LOG_DIR: /var/log/jellyfin
