--- a/jellyfin/deployment.yaml
+++ b/jellyfin/deployment.yaml
@@ -65,7 +65,7 @@ spec:
         - name: jf-logs
           nfs:
             server: drebin.riles.xyz
-            path: /tank/jellyfin_logs_dir
+            path: /tank/jellyfin_log_dir
         - name: jf-data
           nfs:
             server: drebin.riles.xyz
