--- a/jellyfin/configmap.yaml
+++ b/jellyfin/configmap.yaml
@@ -14,3 +14,4 @@ data:
   JELLYFIN_CONFIG_DIR: /etc/jellyfin
   JELLYFIN_DATA_DIR: /var/lib/jellyfin
   JELLYFIN_LOG_DIR: /var/log/jellyfin
+  JELLYFIN_PublishedServerUrl: https://jellyfin.dev-riles.xyz
