--- a/jellyfin/deployment.yaml
+++ b/jellyfin/deployment.yaml
@@ -57,7 +57,7 @@ spec:
         - name: nfs-data-old
           nfs:
             server: drebin.riles.xyz
-            path: tank/transmission
+            path: /tank/transmission
             readOnly: true
         - name: jf-cache
           nfs:
