--- a/transmission-openvpn/radarr.yaml
+++ b/transmission-openvpn/radarr.yaml
@@ -30,6 +30,8 @@ spec:
               name: radarr-config
             - mountPath: /data
               name: nfs-data
+            - mountPath: /old-data
+              name: nfs-data-old
       restartPolicy: Always
       volumes:
         - name: radarr-config
@@ -40,6 +42,11 @@ spec:
             server: drebin.riles.xyz
             path: /tank/transmission_k8s_data
             readOnly: false
+        - name: nfs-data-old
+          nfs:
+            server: drebin.riles.xyz
+            path: /tank/transmission
+            readOnly: true
 ---
 apiVersion: v1
 kind: Service
