--- a/transmission-openvpn/radarr.yaml
+++ b/transmission-openvpn/radarr.yaml
@@ -45,7 +45,7 @@ spec:
         - name: nfs-data-old
           nfs:
             server: drebin.riles.xyz
-            path: /tank/transmission
+            path: /home/reilly/transmission
             readOnly: true
 ---
 apiVersion: v1
