--- a/cert-manager/issuer.yaml
+++ b/cert-manager/issuer.yaml
@@ -7,7 +7,7 @@ spec:
  acme:
    email: reilly@lefrt.com
    # We use the staging server here for testing to avoid hitting
-   server: https://acme-staging-v02.api.letsencrypt.org/directory
+   server: https://acme-v02.api.letsencrypt.org/directory
    privateKeySecretRef:
      # if not existing, it will register a new account and stores it
      name: le-issuer-account-key
