--- a/vultr-certmanager-webhook/values.yaml
+++ b/vultr-certmanager-webhook/values.yaml
@@ -36,7 +36,8 @@ resources: {}
   #  cpu: 100m
   #  memory: 128Mi
 
-nodeSelector: {}
+nodeSelector:
+  kubernetes.io/arch: amd64
 
 tolerations: []
 
