--- a/transmission-openvpn/radarr.yaml
+++ b/transmission-openvpn/radarr.yaml
@@ -47,6 +47,11 @@ spec:
             server: drebin.riles.xyz
             path: /home/reilly/transmission
             readOnly: false
+        - name: radarr-config
+          nfs:
+            server: drebin.riles.xyz
+            path: /ssd_pool/radarr-config
+            readOnly: false
 ---
 apiVersion: v1
 kind: Service
@@ -59,17 +64,6 @@ spec:
       targetPort: 7878
   selector:
     app: radarr
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: radarr-config
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 2Gi
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
