--- a/transmission-openvpn/transmission-openvpn.yaml
+++ b/transmission-openvpn/transmission-openvpn.yaml
@@ -48,17 +48,11 @@ spec:
             server: drebin.riles.xyz
             path: /tank/transmission_k8s_data
             readOnly: false
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: transmission-openvpn-config
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
+        - name: transmission-openvpn-config
+          nfs:
+            server: drebin.riles.xyz
+            path: /ssd_pool/transmission-openvpn-config
+            readOnly: false
 ---
 apiVersion: v1
 kind: Service
