--- a/transmission-openvpn/lidarr.yaml
+++ b/transmission-openvpn/lidarr.yaml
@@ -32,13 +32,15 @@ spec:
               name: nfs-data
       restartPolicy: Always
       volumes:
-        - name: lidarr-config
-          persistentVolumeClaim:
-            claimName: lidarr-config
         - name: nfs-data
           nfs:
             server: drebin.riles.xyz
             path: /tank/transmission_k8s_data
+            readOnly: false
+        - name: lidarr-config
+          nfs:
+            server: drebin.riles.xyz
+            path: /ssd_pool/lidarr-config
             readOnly: false
 ---
 apiVersion: v1
@@ -52,17 +54,6 @@ spec:
       targetPort: 8686
   selector:
     app: lidarr
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: lidarr-config
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 2Gi
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
