--- a/transmission-openvpn/transmission-openvpn.yaml
+++ b/transmission-openvpn/transmission-openvpn.yaml
@@ -30,6 +30,8 @@ spec:
           ports:
             - containerPort: 9091
           securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
             capabilities:
               add:
                 - NET_ADMIN
