--- a/jellyfin/ingress.yaml
+++ b/jellyfin/ingress.yaml
@@ -8,11 +8,11 @@ metadata:
     app: jellyfin
   annotations:
     cert-manager.io/cluster-issuer: le-example-http
-    external-dns.alpha.kubernetes.io/hostname: jellyfin.dev-riles.xyz.
+    external-dns.alpha.kubernetes.io/hostname: jellyfin.riles.xyz.
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - host: "jellyfin.dev-riles.xyz"
+  - host: "jellyfin.riles.xyz"
     http:
       paths:
         - path: /
@@ -24,5 +24,5 @@ spec:
                 number: 8096
   tls:
   - hosts:
-    - jellyfin.dev-riles.xyz
+    - jellyfin.riles.xyz
     secretName: tls-jellyfin-ingress-http
