--- a/jellyfin/deployment.yaml
+++ b/jellyfin/deployment.yaml
@@ -27,6 +27,8 @@ spec:
             - mountPath: /data
               name: nfs-data
             - mountPath: /home/reilly/transmission
+              name: nfs-data-old
+            - mountPath: /config/cache
               name: jf-cache
             - mountPath: /etc/jellyfin
               name: jf-config
