--- a/jellyfin/deployment.yaml
+++ b/jellyfin/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: nfs-data
-            - mountPath: /home/reilly/transmission
+            - mountPath: /old-data
               name: nfs-data-old
             - mountPath: /config
               name: jf-config
