--- a/otp-jaeger/otp-jaeger.yaml
+++ b/otp-jaeger/otp-jaeger.yaml
@@ -39,7 +39,7 @@ metadata:
   name: traces
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
+    certmanager.k8s.io/cluster-issuer: le-example-http
     external-dns.alpha.kubernetes.io/hostname: jaeger.dev-riles.xyz.
     certmanager.k8s.io/acme-challenge-type: http01
 spec:
