--- a/otp-jaeger/otp-jaeger.yaml
+++ b/otp-jaeger/otp-jaeger.yaml
@@ -42,7 +42,7 @@ kind: Ingress
 metadata:
   name: traces
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: le-example-http
     external-dns.alpha.kubernetes.io/hostname: jaeger.dev-riles.xyz.
 spec:
