--- a/otp-jaeger/otp-jaeger.yaml
+++ b/otp-jaeger/otp-jaeger.yaml
@@ -40,7 +40,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: traces
+  name: jaeger-query
   annotations:
     kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: le-example-http
