--- a/otp-jaeger/otp-jaeger.yaml
+++ b/otp-jaeger/otp-jaeger.yaml
@@ -42,9 +42,9 @@ kind: Ingress
 metadata:
   name: jaeger-query
   annotations:
-    kubernetes.io/ingress.class: nginx
-    certmanager.io/cluster-issuer: le-example-http
+    cert-manager.io/cluster-issuer: le-example-http
     external-dns.alpha.kubernetes.io/hostname: jaeger-query.dev-riles.xyz.
+    kubernetes.io/ingress.class: nginx
 spec:
   tls:
   - hosts:
