--- a/paperless/secret.yaml
+++ b/paperless/secret.yaml
@@ -4,7 +4,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: paperless-secret
-  namespace: paperless
+  namespace: productivity
   annotations:
     avp.kubernetes.io/path: "kv/data/paperless"
     avp.kubernetes.io/secret-version: "1"
