--- a/paperless/paperless.yaml
+++ b/paperless/paperless.yaml
@@ -262,7 +262,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: jellyfin
+  name: paperless-ingress
   labels:
     helm.sh/chart: paperless-4.1.0
     app.kubernetes.io/name: ppless
