--- a/paperless/paperless.yaml
+++ b/paperless/paperless.yaml
@@ -148,7 +148,7 @@ spec:
             - name: PAPERLESS_TIME_ZONE
               value: "America/Toronto"
             - name: PAPERLESS_URL
-              value: "paperless.riles.xyz"
+              value: "https://paperless.riles.xyz"
             - name: PAPERLESS_CONSUMPTION_DIR
               value: /consumption
             - name: PAPERLESS_REDIS
