--- a/paperless/paperless.yaml
+++ b/paperless/paperless.yaml
@@ -277,7 +277,7 @@ metadata:
     cert-manager.io/cluster-issuer: le-example-http
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      client_max_body_size 5tb;
+      client_max_body_size 500m;
 spec:
   rules:
   - host: "paperless.riles.xyz"
