--- a/paperless/paperless.yaml
+++ b/paperless/paperless.yaml
@@ -276,8 +276,7 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: le-example-http
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      client_max_body_size 500m;
+    nginx.ingress.kubernetes.io/proxy-body-size: 500m
 spec:
   rules:
   - host: "paperless.riles.xyz"
