--- a/nvidia-device-driver/values.yaml
+++ b/nvidia-device-driver/values.yaml
@@ -76,7 +76,7 @@ tolerations:
 # See https://kubernetes.io/docs/tasks/administer-cluster/guaranteed-scheduling-critical-addon-pods/
 priorityClassName: "system-node-critical"
 
-runtimeClassName: null
+runtimeClassName: nvidia
 
 # Subcharts
 nfd:
