--- a/jellyfin/configmap.yaml
+++ b/jellyfin/configmap.yaml
@@ -15,3 +15,4 @@ data:
   JELLYFIN_DATA_DIR: /var/lib/jellyfin
   JELLYFIN_LOG_DIR: /var/log/jellyfin
   JELLYFIN_PublishedServerUrl: https://jellyfin.riles.xyz
+  NVIDIA_VISIBLE_DEVICES: all
