--- a/jellyfin/deployment.yaml
+++ b/jellyfin/deployment.yaml
@@ -42,6 +42,7 @@ spec:
           readinessProbe:
             httpGet:
               port: http
+      runtimeClassName: nvidia
       volumes:
         - name: nfs-data
           nfs:
