--- a/immich-web/immich/immich.yaml
+++ b/immich-web/immich/immich.yaml
@@ -1097,7 +1097,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: immich-secret
-                  key: PG_POSTGRESS_PASSWORD
+                  key: PG_POSTGRESS-PASSWORD
             - name: POSTGRES_DB
               value: "immich"
             # Replication
